TWC3167-4596: no Overlapping deals text css fix (#1728)

--- a/Intel.MyDeals/Client/src/app/contract/lnav/lnav.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/lnav/lnav.component.css
@@ -586,5 +586,5 @@ i.intelicon-vertical-menu.blue_b_fix {
 .fr.navIconLnk.no-hint-collapse {
     position: relative !important;
     right: 8px !important;
-    border-top: 1px solid #fff !important;
+    border-top: 2px solid #fff !important;
 }
